--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -5,4 +5,13 @@
 		Title<br>
 		<%= f.text_field :title %>	
 	</p>
+
+	<p>
+		Text<br>
+		<%= f.text_area :text %>	
+	</p>
+
+	<p>
+		<%= f.submit %>
+	</p>
 <% end %>
