--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New Article</h2>
 
-<%= form_for :article do |f| %>
+<%= form_for :article, url: '/articles' do |f| %>
 	<p>
 		Title<br>
 		<%= f.text_field :title %>	
@@ -15,3 +15,4 @@
 		<%= f.submit %>
 	</p>
 <% end %>
+
