--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,1 +1,17 @@
 <h1>Contacts us</h1>
+
+<%= form_for :contact, url: contacts_path do |f| %>
+	<p>
+		<%= f.label :email %><br>
+		<%= f.text_field :email %>	
+	</p>
+
+	<p>
+		<%= f.label :message %><br>
+		<%= f.text_area :message %>	
+	</p>
+
+	<p>
+		<%= f.submit 'send message' %>
+	</p>
+<% end %>
