--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,13 +1,13 @@
 <h1>New Article</h2>
 
-<%= form_for :article, url: '/articles' do |f| %>
+<%= form_for :article, url: articles_path do |f| %>
 	<p>
-		Title<br>
+		<%= f.label :title %><br>
 		<%= f.text_field :title %>	
 	</p>
 
 	<p>
-		Text<br>
+		<%= f.label :text %> <br>
 		<%= f.text_area :text %>	
 	</p>
 
