implement articles#show

--- a/app/views/articles/create.html.erb
+++ b/app/views/articles/create.html.erb
@@ -1,1 +1,4 @@
-<h2>Yuor article saved!</h2>
+<h2>Yuor article has been created!</h2>
+<br>
+<a href="/articles">Show all articles</a> <br>
+<%= link_to "Show all articles", articles_path %> 
