--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,8 @@
 
    <p>
       <%= link_to 'Show', article_path(article) %> |
-      <%= link_to 'Edit', edit_article_path(article) %>
+      <%= link_to 'Edit', edit_article_path(article) %> |
+      <%= link_to 'Delete', article_path(article), method: :delete, data: {confirm: 'Delete this article?'} %>
    </p>
 
 
