--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,9 +7,9 @@
 
 <% @article.comments.each do |comment| %>
 
-   <h4> 
+   <i><h4> 
       <%= comment.author %> 
-   </h4>
+   </h4></i>
 
    <p> 
       <%= comment.body %> 
@@ -18,6 +18,7 @@
 <% end %>
 
 <hr>
+<h2>Add comment</h2>
 <p>
     <%= form_for([@article, @article.comments.build]) do |f| %>
 	<p>
