add sing in and sing out links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
 
   <body>
 
+    <br><a href="/users/sign_in">Sing In</a> |
+    <a href="/users/sign_out" data-method="delete">Sing Out</a>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
